discussion/kv_engine/172099/172099_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51391: Check that null VBucketPtr is not dereferenced

When returning a VBucket& from VBucketPtr, check the underlying
pointer is not null; if so throw an exception (instead of segfaulting
later on).

Change-Id: Ic9a113a26d6737f485f23dc8e563520eed353938

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-03-11 11:08:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-11 11:33:44.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/65/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/locked_vbucket_ptr.h:36:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(vb && "Attempt to dereference a null LockedVBucketPtr");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/65/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/locked_vbucket_ptr.h:36:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/65/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14895/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/64/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/81/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/65/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/65/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/66/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/67/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/65/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/67/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/59/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
